2006-01-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	* src/sj-metadata.c:
	* src/sj-metadata.h:
	* src/sj-metadata-musicbrainz.c:
	Add a Submit button to open the relevant MusicBrainz page (James
	Hensbridge, #112889).

2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-06  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "vi" to ALL_LINGUAS.

2006-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Remove leading periods when generating filenames (closes #144280).

2005-12-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Fix warnings with libglade in newer versions of glib
	(missing exports) (Closes: #324385)

2005-11-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Almost-match Totem's Next/Previous keybindings, to stop stealing
	C-v from paste (#321328).

2005-11-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make the Prefs dialog non-resizable, and name the labels.

	* src/sj-prefs.c:
	Add the labels to a size group (#316965)

2005-11-23  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Display the extractor failed error dialog before showing the main
	window, and set a default window icon (#321859).

2005-11-23  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-cdtext.c:
	Remove the CDIO API version check (#319793)

2005-11-23  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Handle track data imported from FreeDB (#155425, Bastien Nocera)

2005-11-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Add generic name (#322161, Matthias Clasen)

2005-11-03  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Handle G_FILENAME_ENCODING correctly, thanks Colin Leroy (#320604)

2005-10-29  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix handling of multiple albums (David Mandelberg, closes #318044)
