@@ -77,6 +77,9 @@ AC_SUBST(MEDIA_PROFILES_LIBS)
 PKG_CHECK_MODULES(MUSICBRAINZ, libmusicbrainz >= 2.1.0)
 AC_SUBST(MUSICBRAINZ_CFLAGS)
 AC_SUBST(MUSICBRAINZ_LIBS)
+oldlibs=$LIBS ; LIBS=$MUSICBRAINZ_LIBS
+AC_CHECK_FUNCS(mb_SetProxyCreds)
+LIBS=$oldlibs
 
 # Find the optional dependency libcdio
 PKG_CHECK_MODULES(CDIO, libcdio, HAVE_CDIO=yes, HAVE_CDIO=no)
