@@ -1,5 +1,12 @@
 2006-01-07  Ross Burton  <ross@burtonini.com>
 
+	* configure.in:
+	* src/sj-metadata-musicbrainz.c:
+	Configure the MusicBrainz proxy based on the gnome-vfs keys
+	(#321008).
+
+2006-01-07  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	* src/sj-main.c:
 	* src/sj-metadata.c:
